Crash in [@ mozilla::ipc::IPDLParamTraits<T>::Write] with Fission enabled
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | disabled |
| firefox72 | --- | verified |
People
(Reporter: emilghitta, Assigned: nika)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-1aca8855-b6c6-483e-a44e-da1b90191017.
Top 10 frames of crashing thread:
0 xul.dll static void mozilla::ipc::IPDLParamTraits<mozilla::dom::BrowsingContext*>::Write docshell/base/BrowsingContext.cpp:1263
1 xul.dll mozilla::dom::PWindowGlobalParent::SendMakeFrameRemote ipc/ipdl/PWindowGlobalParent.cpp:113
2 xul.dll void mozilla::dom::CanonicalBrowsingContext::PendingRemotenessChange::Complete docshell/base/CanonicalBrowsingContext.cpp:297
3 xul.dll void mozilla::MozPromise<RefPtr<mozilla::dom::ContentParent>, nsresult, 0>::ThenValue<`lambda at z:/task_1571266240/build/src/docshell/base/CanonicalBrowsingContext.cpp:430:11', `lambda at z:/task_1571266240/build/src/docshell/base/CanonicalBrowsingContext.cpp:433:11'>::DoResolveOrRejectInternal xpcom/threads/MozPromise.h:726
4 xul.dll mozilla::MozPromise<RefPtr<mozilla::DOMMediaStream>, RefPtr<mozilla::MediaMgrError>, 1>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:402
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
6 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
7 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:88
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
Affected Versions:
Firefox 71.0a1 (BuildId:20191016212918).
Steps to Reproduce:
- Launch Firefox.
- Enable Fission.
- Open a new tab and access the following website.
- Wait a couple of seconds
Expected Results
- Content is successfully loaded and Firefox is stable.
Actual Results
- Firefox crashes.
Note:
- This is both reproducible with fission.rebuild_frameloaders_on_remoteness_change pref to true or false.
- It seems to be related to the fact that fission.autostart is enabled.
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Hello Neha - This is currently the #5 overall crash on 72 nightly and hasn't yet been triaged. It appears to be related to fission being enabled. Thanks.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 2•6 years ago
•
|
||
Nika, could you look into these crashes?
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 4•6 years ago
|
||
It looks as if Bug 1591721 is another macOS signature. All of those crashes have MOZ_RELEASE_ASSERT(!aParam->IsDiscarded()) (Cannot send discarded BrowsingContext between processes!) which is the same as the ones in this crash.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 7•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
| bugherder landing | ||
Comment 9•6 years ago
|
||
Retroactively moving fixed bugs whose summaries mention "Fission" (or other Fission-related keywords) but are not assigned to a Fission Milestone to an appropriate Fission Milestone.
This will generate a lot of bugmail, so you can filter your bugmail for the following UUID and delete them en masse:
0ee3c76a-bc79-4eb2-8d12-05dc0b68e732
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Somebody is still running ancient Nightlies, so here's another signature that this shows up as now.
| Reporter | ||
Comment 11•5 years ago
|
||
This scenario was retested during our Nightly 74 Fission smoke test session.
Also retested this using Firefox 72.0a1 (BuildId:20191101215002) on Windows 10 64bit, macOS 10.13 and Ubuntu 18.04 64bit.
Marking this issue as verified fixed. Thank you!
Description
•