Bug 1589342 - Ensure BrowsingContext is not discarded after new process spawn, r=farre

Differential Revision: https://phabricator.services.mozilla.com/D50991